# init-from-input-file

./: .gitignore  README.md  TODO.txt  init_from_input_file.c  init_from_input_file.h  init_tools.c  init_tools.h
lib/: init_from_input_file.h
src/: init_from_input_file.c  init_tools.c
test/: CMakeLists.txt  build_cmds_print_errors.txt  run_tests.sh  tester_c.c  tester_cpp.cpp
test/archive/: CMakeLists.txt  build_cmds_print_errors.txt  integral_types_min_max.c  tester_c.c  tester_cpp.cpp
test/example/: CMakeLists.txt  freadChar_test.cpp
test/init_from_input_file/non_static_fxns/: CMakeLists.txt  InitFromInputFileTest.inp  init_from_input_file_non_static_fxns_test.cpp  run_test.sh
test/init_from_input_file/static_fxns/: CMakeLists.txt  init_from_input_file_static_fxns_test.cpp  run_test.sh
test/init_from_input_file/static_fxns/input/: InitBoolTest.inp  InitNonBoolNonStrTest.inp  InitStringTest.inp  notes.txt
test/init_tools/non_static_fxns/: CMakeLists.txt  FreadCharTest_Comprehensive.inp  init_tools_non_static_fxns_test.cpp
test/init_tools/non_static_fxns/input/: FindKeyTest.inp  FindValueTest.inp
test/init_tools/non_static_fxns/other/: CMakeLists.txt  init_tools_non_static_fxns_other_test.cpp  run_test.sh
test/init_tools/static_fxns/: CMakeLists.txt  init_tools_static_fxns_test.cpp  run_test.sh
testing/: build_cmds_print_errors.txt  integral_types_min_max.c  tester.c  tester.cpp  tester.inp  tester_c.c  tester_cpp.cpp
testing/unit/example/: add_ints_test.py
testing/unit/examples/: README.txt
testing/unit/examples/1/: add_ints_test.py
testing/unit/familiarization/: add_ints.c
(+16 files in other folders)
